--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
 <div class="container" id="question-box">
   <h1 id="question">Hey Maiguru...</h1>
   <div id="buttons">
-    <button onclick="nextQuestion()">Sure 😊</button>
+    <button onclick="nextQuestion()">Yes Bamnini 😊</button>
   </div>
 </div>
 
 <script>
   const questions = [
     "Gore ringatopera...",
-    "Even if I really didn't, I feel bad for blowing you off last time 🙈",
-    "But I'd love to make it up to you 💕",
+    "Gore ringatopera...And even if I really didn't, I feel bad for blowing you off last time",
+    "But I'd love to make it up to you.",
     "So Ashely Kimberly Khumalo...",
-    "Will you go out with me? 💖"
+    "Let this short cute man take you out"
   ];
 
   let current = 0;
@@ -328,3 +328,4 @@
 
 </body>
 </html>
+
